@@ -227,6 +227,7 @@ class Ability
         :change_visibility_level,
         :rename_project,
         :remove_project,
+        :remove_pages,
         :archive_project,
         :remove_fork_project
       ]
