@@ -418,6 +418,7 @@ Rails.application.routes.draw do
         delete :remove_fork
         post :archive
         post :unarchive
+        post :remove_pages
         post :toggle_star
         post :markdown_preview
         get :autocomplete_sources
